--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="caixa-principal">
         <div class="caixa-dos-conteudos">
           <div class="caixa-icones">
-            <img src="images/logo.svg" alt="logo" class="logo">
+            <img src="./images/logo.svg" alt="logo" class="logo">
             <div class="caixa-icone">
-              <img src="images/icon-document.svg" alt="documento">
-              <img src="images/icon-folder.svg" alt="documento">
-              <img src="images/icon-upload.svg" alt="documento" class="upload">
+              <img src="./images/icon-document.svg" alt="documento">
+              <img src="./images/icon-folder.svg" alt="documento">
+              <img src="./images/icon-upload.svg" alt="documento" class="upload">
             </div>
           </div>
           <div>
